--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,14 +1,15 @@
 services:
-  postgres:
-    image: postgres:16.1-alpine
-    ports:
-      - ${DATABASE_PORT}:5432
+  mysql:
+    image: mysql
     volumes:
-      - boilerplate-db:/var/lib/postgresql/data
+      - db:/var/lib/mysql
+    ports:
+      - ${DATABASE_PORT}:3306
     environment:
-      POSTGRES_USER: ${DATABASE_USERNAME}
-      POSTGRES_PASSWORD: ${DATABASE_PASSWORD}
-      POSTGRES_DB: ${DATABASE_NAME}
+      MYSQL_USER: ${DATABASE_USER}
+      MYSQL_PASSWORD: ${DATABASE_PASSWORD}
+      MYSQL_ROOT_PASSWORD: ${DATABASE_PASSWORD}
+      MYSQL_DATABASE: ${DATABASE_NAME}
 
   maildev:
     build:
@@ -38,4 +39,4 @@ services:
       - ${APP_PORT}:${APP_PORT}
 
 volumes:
-  boilerplate-db:
+  db:
