--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "schema:drop": "npm run typeorm -- --dataSource=src/database/data-source.ts schema:drop",
     "seed:create:relational": "hygen seeds create-relational",
     "seed:create:document": "hygen seeds create-document",
-    "app:config": "ts-node -r tsconfig-paths/register ./.install-scripts/index.ts && npm install",
     "seed:run:relational": "ts-node -r tsconfig-paths/register ./src/database/seeds/relational/run-seed.ts",
     "seed:run:document": "ts-node -r tsconfig-paths/register ./src/database/seeds/document/run-seed.ts",
     "prebuild": "rimraf dist",
@@ -46,7 +45,6 @@
     "@nestjs/swagger": "7.2.0",
     "@nestjs/typeorm": "10.0.2",
     "@types/multer-s3": "3.0.3",
-    "@types/prompts": "^2.4.9",
     "apple-signin-auth": "1.7.5",
     "bcryptjs": "2.4.3",
     "class-transformer": "0.5.1",
@@ -59,6 +57,7 @@
     "ms": "2.1.3",
     "multer": "1.4.4",
     "multer-s3": "3.0.1",
+    "mysql2": "^3.9.1",
     "nestjs-i18n": "10.4.0",
     "nodemailer": "6.9.9",
     "passport": "0.7.0",
@@ -103,8 +102,8 @@
     "jest": "29.7.0",
     "prettier": "3.2.5",
     "prompts": "^2.4.2",
-    "ts-jest": "29.1.2",
     "supertest": "6.3.4",
+    "ts-jest": "29.1.2",
     "ts-loader": "9.5.1",
     "ts-node": "10.9.2",
     "tsconfig-paths": "4.2.0",
