--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "3.504.0",
     "@aws-sdk/s3-request-presigner": "^3.498.0",
+    "@casl/ability": "^6.7.1",
     "@nestjs/common": "10.3.2",
     "@nestjs/config": "3.2.0",
     "@nestjs/core": "10.3.2",
